projects/06-security-pipeline/SecureBank/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securebank
  labels:
    app.kubernetes.io/name: securebank
    pod-security.kubernetes.io/enforce: restricted
