projects/06-security-pipeline/SecureBank/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api
  namespace: securebank
spec:
  selector:
    app.kubernetes.io/name: securebank
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
